trying to fix column alignment

--- a/style.css
+++ b/style.css
@@ -337,6 +337,15 @@ button:hover{
     margin-top: 5px;
   }
 
+  .container {
+    height: 100%;
+    padding: 80px 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+  }
+
   .header {
     display: flex;
     flex-direction: column;
@@ -357,18 +366,13 @@ button:hover{
     margin-top: 35px;
   }
 
-  .container {
-    height: 100%;
-    padding: 80px 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
-
   .uterus {
     margin-top: 40px;
     height: 415px;
     width: 440px;
     border: 5px solid black;
+    display: flex;
+    justify-content: center;
   }
 
   .bigCircle {
